--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "bootstrap": "^5.0.1",
         "dotenv": "^10.0.0",
         "firebase": "^8.6.3",
         "react": "^17.0.2",
+        "react-bootstrap": "^1.6.0",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^2.0.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
