--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-public/* linguist-vendored=true
-production/* linguist-vendored=true
+public/**/* linguist-vendored
+production/**/* linguist-vendored
+# /usr/local/Cellar/ruby/3.0.1/bin/ 
